# spicy-pierogi

./: .clang-format  CMakeLists.txt
debian/: control
src/: main.cc
